5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1807_2563.log
== TEST (2019-06-05 22:21:23) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	for (i in media):
		contador = 0
		if (i>=5 and i<=7):
			contador = contador + 1
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
File "XXXX", line 4
    for (i in media):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:22:14) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	for (i in media)
		contador = 0
		if (i>=5 and i<=7):
			contador = contador + 1
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
File "XXXX", line 4
    for (i in media)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:22:46) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	for i in media:
		contador = 0
		if (i>=5 and i<=7):
			contador = contador + 1
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:23:56) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	for i in media:
		contador = 0
		if (i>=5 and i<=7):
			contador = contador + 1
			print(i)
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:25:53) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	contador = 0
	for i in media:
		if (i>=5 and i<=7):
			contador = contador + 1
			print(i)
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:26:47) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	contador = 0
	for i in media:
		if (i>=5 and i<7):
			contador = contador + 1
			print(i)
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 22:27:41) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	contador = 0
	for i in media:
		if (i>=5 and i<7):
			contador = contador + 1
			print(i)
	print(contador)
	media = array(eval(input("media: ")))
-- EXECUTION TIME:
1.02499
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6.3
6.4
6.0
6.9
5.5
5.2
6
0
5.6
6.9
6.7
3
6.7
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
5.1
5.2
5.4
5.3
5.7
5.8
6.1
5.6
5.5
5.9
6.2
11
6.8
5.7
6.6
5.4
4
6.9
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6.8
6.9
5.6
5.8
6.3
5
6.8
6.0
5.0
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:29:06) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	contador = 0
	for i in media:
		if (i>=5 and i<7):
			contador = contador + 1
			print(i)
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:29:38) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	contador = 0
	for i in media:
		if (i>=5 and i<7):
			contador = contador + 1
	print(contador)
	media = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 22:30:15) 
-- CODE:
from numpy import *
media = array(eval(input("media: ")))
while (size(media) > 1):
	contador = 0
	for i in media:
		if (i>=5 and i<7):
			contador = contador + 1
	print(contador)
	media = array(eval(input("media: ")))
-- EXECUTION TIME:
0.947489
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:36:06) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
while(size(a)>1):
	b = 0
	for i in range(size(a)):
		if(a[i]>=5 and a[i]<7):
			b = b + 1
		print(b)
	a = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:37:03) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
while(size(a)>1):
	b = 0
	for i in range(size(a)):
		if(a[i]>=5 and a[i]<7):
			b = b + 1
	print(b)
	a = array(eval(input("media: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:38:39) 
-- CODE:
from numpy import *
a = array(eval(input("media: ")))
while(size(a)>1):
	b = 0
	for i in range(size(a)):
		if(a[i]>=5 and a[i]<7):
			b = b + 1
	print(b)
	a = array(eval(input("media: ")))
-- EXECUTION TIME:
1.21358
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
